# decenterai.com

./: .gitignore  .prettierignore  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: build.yaml  cross.yaml  prettier.yaml
src/app/: globals.css  layout.tsx
src/app/components/home/: Action.tsx  Demo.tsx  Hero.tsx
src/app/components/presale/: Nav.tsx
src/app/presale/: page.tsx
src/app/presale/complete/: page.tsx
src/app/presale/success/: page.tsx
src/app/test/: page.jsx
src/app/utils/: tablelandUtils.js  viemClient.js
