[tool.poetry]
name = "decenterai-com"
version = "0.1.0"
description = ""
authors = ["RedValis <137183503+RedValis@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "decenterai"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
